# libevpl

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.license
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  reuse-compliance.yml  syntax-check.yml
.reuse/: dep5
docs/: .gitignore  CMakeLists.txt  Dockerfile.rocky10  Dockerfile.rocky9  Dockerfile.ubuntu22.04  Dockerfile.ubuntu24.04  Dockerfile.ubuntu25.10  Gemfile  Gemfile.lock.license  README.md  _config.yml  api.md  architecture.md  bind.md  building.md  community.md  development.md  download.md  endpoint.md  index.md  init.md  introduction.md  memory.md  performance.md  thread_context.md
docs/api/: api.md  binds.md  block.md  config.md  core.md  deferrals.md  doorbells.md  endpoints.md  http.md  logging.md  memory.md  polls.md  protocols.md  rdma.md  rpc2.md  threading.md  timers.md
docs/examples/: echo_connected_msg.c  echo_connected_msg.md  echo_stream.c  echo_stream.md  examples.md
etc/: uncrustify.cfg
ext/: CMakeLists.txt
include/: CMakeLists.txt
include/evpl/: evpl.h  evpl_bind.h  evpl_block.h  evpl_config.h  evpl_core.h  evpl_deferral.h  evpl_doorbell.h  evpl_endpoint.h  evpl_event.h  evpl_http.h  evpl_logging.h  evpl_memory.h  evpl_otel.h  evpl_poll.h  evpl_rdma.h  evpl_rpc2.h  evpl_rpc2_cred.h  evpl_rpc2_gss.h  evpl_rpc2_program.h  evpl_thread.h  evpl_timer.h
scripts/: netns_test_wrapper.sh
src/: CMakeLists.txt  eventpoll.c  eventpoll.h  eventpoll_buffer.h  eventpoll_config.c  eventpoll_config.h  eventpoll_conn.h  eventpoll_core_epoll.c  eventpoll_core_epoll.h  eventpoll_epoll.c  eventpoll_epoll.h  eventpoll_event.h  eventpoll_internal.c  eventpoll_internal.h  eventpoll_tcp.c  eventpoll_tcp.h
src/core/: CMakeLists.txt  address.c  address.h  allocator.c  allocator.h  bind.c  bind.h  block.c  buffer.c  buffer.h  bvec_ring.h  config.c  config.h  conn.h  deferral.c  deferral.h  dgram_ring.h  doorbell.c  doorbell.h  endpoint.c  endpoint.h  epoll.c  epoll.h  event.h  event_fn.h  eventpoll.c  eventpoll.h  evpl.c  evpl.h  evpl_shared.h  internal.c  internal.h  iovec.c  iovec.h  iovec_profile.c  iovec_ring.h  listen.c  logging.c  logging.h  macros.h  (+18 more)
src/core/io_uring/: CMakeLists.txt  io_uring.c  io_uring.h  io_uring_block.c  io_uring_internal.h  io_uring_nvme_block.c  io_uring_tcp.c
src/core/io_uring/tests/: CMakeLists.txt  basic.c  nvme_open_fail.c
src/core/libaio/: CMakeLists.txt  libaio.c  libaio.h  libaio_block.c  libaio_internal.h
src/core/libaio/tests/: CMakeLists.txt  basic.c
src/core/rdmacm/: rdmacm.c  rdmacm.h
src/core/rdmacm/tests/: CMakeLists.txt
src/core/socket/: CMakeLists.txt  common.h  tcp.c  tcp.h  tcp_rdma.c  tcp_rdma.h  udp.c  udp.h
src/core/socket/tests/: CMakeLists.txt
src/core/ssl/: ssl.c  ssl.h
src/core/ssl/tests/: CMakeLists.txt
src/core/tests/: CMakeLists.txt  hello_world_tcp.c  init_auto_no_config.c  init_auto_with_clean_config.c  init_no_config.c  init_with_clean_config.c  timer_oneshot.c  tls_cipher_config.c  unused_config.c
src/core/thread/: thread.c
src/core/thread/tests/: CMakeLists.txt  thread_basic.c  threadpool_basic.c
src/core/tls/: tls.c  tls.h
src/core/tls/tests/: CMakeLists.txt  generate_test_certs.sh
src/core/vfio/: CMakeLists.txt  nvme.h  vfio.c  vfio.h
src/core/vfio/tests/: CMakeLists.txt  basic.c  bench.c  bench_mt.c
src/core/xlio/: CMakeLists.txt  common.h  tcp.c  xlio.c  xlio.h
src/core/xlio/tests/: CMakeLists.txt
src/http/: CMakeLists.txt  http.c  http.h  http2.c  http_internal.h
src/http/tests/: CMakeLists.txt  http1_client.c  http2_basic.c  http2_client.c  http2_client_tls.c  http2_tls.c  http_basic.c  http_chunked.c
src/io_uring/: CMakeLists.txt  io_uring.c  io_uring.h
src/io_uring/tests/: CMakeLists.txt  basic.c
src/otel/: CMakeLists.txt  evpl_otel.c
src/otel/tests/: CMakeLists.txt  otel_export.c
src/rdmacm/: CMakeLists.txt  rdmacm.c  rdmacm.h
src/rdmacm/tests/: CMakeLists.txt  hello_world_rdmacm_rc.c  hello_world_rdmacm_rc_datagram.c  hello_world_rdmacm_rc_stream.c
src/rpc2/: CMakeLists.txt  common.h  custom_dump.c  eventpoll_rpc2.c  rpc2.c  rpc2.h  rpc2.x  rpc2_client.c  rpc2_client.h  rpc2_cred.h  rpc2_cursor.h  rpc2_msg.h  rpc2_program.h  rpc2_server.c  rpc2_server.h  rpcrdma1.x  xdr_iovec.h
src/rpc2/tests/: CMakeLists.txt  builtin_bool.c  builtin_bool.x  builtin_bool_tcp.c  client_disconnect.c  hello_world.c  hello_world.x  hello_world_tcp.c  multifrag.c  rdma_ddp.c  rdma_ddp.x
src/socket/: CMakeLists.txt  common.h  tcp.c  tcp.h  udp.c  udp.h
src/socket/tests/: CMakeLists.txt  hello_world_tcp.c  hello_world_udp.c  pingpong_tcp.c
src/tests/: CMakeLists.txt  bulk_connected_datagram.c  bulk_connected_msg.c  bulk_datagram.c  bulk_msg.c  bulk_stream.c  hello_world_connected_datagram.c  hello_world_connected_msg.c  hello_world_datagram.c  hello_world_msg.c  hello_world_stream.c  ping_pong_connected_datagram.c  ping_pong_connected_msg.c  ping_pong_datagram.c  ping_pong_msg.c  ping_pong_stream.c  rand_full_duplex_datagram.c  rand_full_duplex_msg.c  rand_full_duplex_stream.c  rdma_ops.c  test_common.h
src/thread/: CMakeLists.txt  thread.c  thread.h
src/thread/tests/: CMakeLists.txt  thread_basic.c  threadpool_basic.c
src/vfio/: CMakeLists.txt  vfio.c  vfio.h
src/vfio/tests/: CMakeLists.txt  basic.c
src/xlio/: CMakeLists.txt  common.h  epoll.c  epoll.h  tcp.c  udp.c  xlio.c  xlio.h
src/xlio/tests/: CMakeLists.txt
tests/: CMakeLists.txt  hello_world_tcp.c
