add_executable(hello_world_datagram hello_world_datagram.c)
target_link_libraries(hello_world_datagram evpl)

add_executable(hello_world_connected_datagram hello_world_connected_datagram.c)
target_link_libraries(hello_world_connected_datagram evpl)

add_executable(hello_world_stream hello_world_stream.c)
target_link_libraries(hello_world_stream evpl)

add_executable(ping_pong_datagram ping_pong_datagram.c)
target_link_libraries(ping_pong_datagram evpl)

add_executable(ping_pong_connected_datagram ping_pong_connected_datagram.c)
target_link_libraries(ping_pong_connected_datagram evpl)

add_executable(ping_pong_stream ping_pong_stream.c)
target_link_libraries(ping_pong_stream evpl)

add_executable(bulk_datagram bulk_datagram.c)
target_link_libraries(bulk_datagram evpl)

set(TEST_BIN ${CMAKE_CURRENT_BINARY_DIR} PARENT_SCOPE)
